# F20SC-CW2

./: FileManagement.py  README.md  cw2  graphicalInterface.py  issuu_sample_new.json  main.py  pyproject.toml  requirements.txt  setup.py
Data/: test.json
ErrorHandling/: CustomExceptions.py  InputValidation.py
GUI/: graphicalInterface.py
Interface/: commandLineInterface.py
Logic/: AlsoLikes.py  DataVisualisation.py  HelperFunctions.py  ListFunctions.py  Tasks.py  Views.py
Testing/: FileManagementTests.py  MainTests.py
cw2/: convertToJson.py
tasks/: FileManagement.py  ViewsByBrowser.py  alsoLikes.py  convertToJson.py  viewsByContinent.py  viewsByCountry.py
